feat(fusefile): add resources.idle_timeout
